# opsqueue

./: .env  .envrc  .fix-whitespace.yaml  .gitignore  .pre-commit-config-check.yaml  .pre-commit-config-fix.yaml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  biome.json  build.py  clippy.toml  default.nix  justfile  migrations  pyproject.toml  ruff.toml  rust-toolchain.toml  typos.toml
libs/opsqueue_python/: .envrc  .gitignore  .setup_local_venv.sh  Cargo.toml  consumer_example.py  multi_consumer.py  opsqueue_python.nix  producer_example.py  pyproject.toml
libs/opsqueue_python/examples/capitalize_text/: capitalize_text_consumer.py  more_lipsum.txt
libs/opsqueue_python/examples/integer_increment/: integer_increment_consumer.py  integer_increment_producer.py  integer_increment_producer_async.py
libs/opsqueue_python/examples/multiprocessing/: multiprocessing_consumer.py  multiprocessing_producer.py
libs/opsqueue_python/examples/tracing/: tracing_consumer.py  tracing_producer.py
libs/opsqueue_python/python/opsqueue/: __init__.py  common.py  consumer.py  exceptions.py  producer.py  tracing.py
libs/opsqueue_python/src/: async_util.rs  common.rs  consumer.rs  errors.rs  lib.rs  producer.rs
libs/opsqueue_python/tests/: conftest.py  test_prefer_distinct_benchmark.py  test_roundtrip.py  test_rountrip.py  util.py
opsqueue/: Cargo.toml  opsqueue.nix  opsqueue_example_database_schema.db  report.txt  report_with_rowid.txt  stamp-tag.py
opsqueue/.sqlx/: query-08fd98126c44dcbd07eb449d09e238c6ea5d468ba73a8b4b1d5f2df9e4bd39b0.json  query-0dd811053b68ee41e20c7ff47de01d98962ad16441f4205139a0654e2aa0ba22.json  query-11d4e8c27b08ec013a154838137bab496b9e37ce482189f38eef19b20fc447f4.json  query-18f783ff8500f06825c985530486c0624c112f61a5816d4c4528f9b3151713e4.json  query-1b27625aa012537f26c3883690577a8248470ba43a498508f4ccebaf09050ff7.json  query-207eb97fe104f49008ebe798860f6340f180a1afde82dd1c08dc4b2b650fbfe2.json  query-2b77ed3badfb9fe0fd7b88635ef9d11f88e91b1cfcef1d93e814ab2da07addcb.json  query-374244f899617c0d53ce0ae73ac215295874fe2684ed6096c27a43a5449282e5.json  query-3c775bc61256133ed6ea9b46ef0961f40f095482ff9f86a641506a0bbdaa6761.json  query-3dde3eaab357df88cd1c0e0e8e833aca1fce450c2d842a2af63f0e4c128424f7.json  query-3f8357ea4d8060e1271c7c5de41d7c98aad292a3c52002dd8031d46da35851af.json  query-40e96fd79c38c8338bcc2f18fbc43c8f71b1c6e73e73ce5f7687db469377c137.json  query-4e132448643131446b3e7a7a47800ef32cdbb82ea189329c7d2fb556232459e4.json  query-5d1f0e786821af3135eb9022004308af3c683ba3cca9c97677072243289cb322.json  query-5f7d80f5b4990d9d4e0cca6491d7a34acf1328802fda82eb2281b59a792820de.json  query-62b1b5988a509f9722489522fbe3c650e1e04bcf51db8f97cbfb85a3e3d0c3bc.json  query-6c3fac07b6b1b07ccdaaf0d296647176104b93c64a7a9fb85e2fd1e88ec13143.json  query-833bc5d955f1c2455e06e9762dec84c4c24fe58c21165e6a80d0a5bfae1a3cd7.json  query-91d3b5ff8e68c788d3209b4f1234a519eba5773d88c91635f5ffb01b1b5302fa.json  query-c149e54e9a57cd5ded5e9e2656116ba9d04e56ffdbb41bb152ae5762475b5c78.json  query-c30f478c0ff9f52daeed0cd1b70f6626d1f6d8fd8020f4bce41b239de4d8939f.json  query-c4fc111b75ae4036c16042be654600dd598dddd4ee9412522b22127e5bceedc1.json  query-d5aa781509794455e2e8e16b2ba1485efd45597a65e4bb7ae8d2888112b3a272.json  query-df0c7f76822d1c39794f0d9f876ea241062c3f39e110300ea849d1ad64b94580.json  query-e282079ded2d608817a2b2d27917f097eb0ec213e5a9a4027563c44f4a05bca3.json  query-e73afd2c8d84e6c3044f0662525f97bc8ca1d36a9305fdb959ef0e577846d606.json  query-e92c5478fe8f1e5dee3d5e73ecf4cb3f2b7e422cefb1ecc00cf17299edec83c8.json  query-eda8781445cef23e17446ca9007955f377d4059478a2bda4e5bd39ecd836e838.json  query-ef677e899bf812760d0d24c9fa1fb791a5585629b14baab7a35185469c2e2e85.json
opsqueue/app/: main.rs  opentelemetry.rs
opsqueue/benches/: chunks_select.rs  plot_chunks_select.py  snowflake_compare.rs  submissions_insert.rs
opsqueue/migrations/: 20240704100242_submissions.sql  20241104104445_random_chunks_index.sql  20250104155558_add_strategic_metadata.down.sql  20250104155558_add_strategic_metadata.up.sql  20250416081453_track_chunk_size.down.sql  20250803174028_better_random_order_formula.down.sql  20250803174028_better_random_order_formula.up.sql  20260225164600_submissions_cancelled.sql  20260429173300_add_chunks_done_to_submissions_failed.sql  20260709130000_add_jm_task_id.down.sql  20260709130000_add_jm_task_id.up.sql  20260709160000_jm_task_id_indexes.down.sql  20260709160000_jm_task_id_indexes.up.sql  20260709170000_add_paused_to_submissions.down.sql  20260709170000_add_paused_to_submissions.up.sql  20260710113337_drop_chunks_metadata.sql  20260715143000_pausing.down.sql  20260715143000_pausing.up.sql  20260717143000_submission_metadata_pk_by_key.down.sql  20260717143000_submission_metadata_pk_by_key.up.sql  20260721133844_add_random_order_index_to_submissions.down.sql  20260721133844_add_random_order_index_to_submissions.up.sql
opsqueue/src/: config.rs  lib.rs  prometheus.rs  server.rs  tracing.rs
opsqueue/src/common/: chunk.rs  errors.rs  mod.rs  snowflake.rs  submission.rs
opsqueue/src/consumer/: client.rs  common.rs  metastate.rs  mod.rs  reserver.rs  server.rs  server2.rs  strategy.rs  strategy2.rs
opsqueue/src/consumer/server/: conn.rs  (+2 more)
opsqueue/src/db/: conn.rs  mod.rs
opsqueue/src/delegation/: mod.rs  server.rs
opsqueue/src/object_store/: mod.rs
opsqueue/src/producer/: client.rs  common.rs  mod.rs  server.rs
producer_libs/python/: Cargo.toml
producer_libs/python/src/: lib.rs
rust/producer_libraries/python/: Cargo.toml
rust/toypsqueue/: .env  .gitignore  Cargo.toml  README.md
rust/toypsqueue/app/: main.rs  server.rs
rust/toypsqueue/benches/: chunks_select.rs  submissions_insert.rs
rust/toypsqueue/migrations/: 20240704100242_submissions.sql  20240704100449_chunks.sql
rust/toypsqueue/src/: chunk.rs  consumer.rs  lib.rs  main.rs  persistence.rs  reserver.rs  reserver2.rs  reserver3.rs  server.rs  strategy.rs  submission.rs
rust/toypsqueue/toypsqueue/: .gitignore
toypsqueue/toypsqueue/: Cargo.toml  README.md
toypsqueue/toypsqueue/app/: main.rs  server.rs
(+89 files in other folders)
