[workspace]

# Resolver 3 is default in the 2024 Edition, but the workspace doesn't know that
resolver = "3"

members = [
    "opsqueue/",
    "libs/opsqueue_python",
    "workspace-hack",
]

[workspace.metadata.hakari]
hakari-package = "workspace-hack"

[workspace.package]
version = "0.36.0"

[workspace.dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
assert_matches = "1.5.0"
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-prometheus = "0.10.0"
backon = { version = "1.3.0", features = ["tokio-sleep"] }
ciborium = "0.2.2"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
either = "1.13.0"
futures = "0.3.32"
http = "1.4.0"
humantime = "2.1.0"
insta = "1.47.2"
itertools = "0.15.0"
moka = { version = "0.12.15", features = ["sync"] }
moro-local = "0.4.0"
object_store = { version = "0.14.0", features = ["gcp", "http"] }
once_cell = "1.21.4"
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry-http = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry-resource-detectors = "0.11.0"
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "rt-tokio"] }
opsqueue = { path = "opsqueue", default-features = false }
pyo3 = { version = "0.28.3", features = ["chrono"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime", "unstable-streams"] }
pyo3-log = "0.13.3"
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
rustc-hash = "2.1.2"
sentry = { version = "0.48", default-features = false, features = ["rustls", "reqwest", "anyhow", "backtrace", "contexts", "tracing", "panic"] }
sentry-tracing = "0.48"
serde = { version = "1.0.203", features = ["derive"] }
serde-error = "0.1.3"
serde_json = "1.0.149"
snowflaked = { version = "1.0.3", features = ["sync"] }
sqlformat = "0.5.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = "0.30.0"
tokio-util = { version = "0.7.18", features = ["io", "rt", "time"] }
tower-http = { version = "0.7.0", features = ["trace", "catch-panic"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
url = "2.5.2"
uuid = { version = "1.23.1", features = ["v7", "fast-rng", "serde"] }
ux = "0.1.6"
workspace-hack = { version = "0.1", path = "workspace-hack" }

[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"

complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
# nursery, new untested lints
nursery = { level = "allow", priority = -1 }

pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
# restriction, lints that can enforce a coherent code style
restriction = { level = "allow", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Prevent duplicate versions of crates from being used in the workspace. If an easy fix is not
# possible, you can add the crate to the `allowed-duplicate-crates` list in `clippy.toml`.
multiple_crate_versions = "deny"

[profile.release]
# Full fat LTO makes a big difference in performance, at the cost of a large
# compile time hit. You should only use release builds when performance matters.
# Prefer debug builds during regular development.
lto = 'fat'

# Enable optimizations for dependencies even in dev builds, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable optimizations for proc macros etc.
# Esp. important for the sqlx macros
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[patch.crates-io]
snowflaked = { git = "https://github.com/channable/snowflaked-rs.git" }
