[package]
name = "opsqueue"
version = "0.1.0"
edition = "2021"

[lib]
name="opsqueue"
path="src/lib.rs"

[[bin]]
name="opsqueue"
path="app/main.rs"
required-features = ["server-logic"]

[dependencies]
# Datatypes and concurrency:
arc-swap = {version = "1.7.1", optional = true}
moka = { version = "0.12.8", features = ["sync"], optional = true }
chrono = { version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["macros", "signal", "rt-multi-thread"] }
# Error handling:
anyhow = "1.0.86"
# Database:
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"], optional = true }
# Serialization:
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.124"
ciborium = "0.2.2"
# Webservers/clients
http = "1.1.0"
object_store = "0.11.1"
snowflaked = {version = "1.0.3", features = ["sync"] }
tokio-tungstenite = {version = "0.24.0", optional = true}
axum = { version = "0.7.5", features = ["ws", "macros"], optional = true }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"], optional = true }
url = {version = "2.5.2"}
tokio-util = { version = "0.7.11", features = ["io", "rt", "time"] }
tower-http = { version = "0.6.1", features = ["trace"], optional = true }
# Logging and tracing:
log = { version = "0.4.22", features = ["std", "serde", "release_max_level_info"] }
tracing = {version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = {version = "0.3", features = ["std", "env-filter"] }
# Exporting traces to Opentelemetry:
opentelemetry = { version = "0.26", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.26", optional = true }
tracing-opentelemetry = {version = "0.27.0", optional = true }
opentelemetry-semantic-conventions = {version = "0.26.0", features = ["semconv_experimental"], optional = true}
moro-local = "0.4.0"
thiserror = "1.0.65"
either = "1.13.0"
serde-error = "0.1.3"
ux_serde = { version = "0.2.0", features = ["std", "serde"] }
backon = { version = "1.2.0", features = ["tokio-sleep"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

# [[bench]]
# name = "chunks_select"
# harness = false

# [[bench]]
# name = "submissions_insert"
# harness = false

[features]
# Dependencies only in use by the server-logic:
server-logic = [
    "dep:sqlx",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:moka",
    "dep:axum",
    "dep:tower-http"
    ]
# Dependencies only in use by the client libraries:
client-logic = [
    "dep:reqwest",
    "dep:tokio-tungstenite",
    "dep:arc-swap",
]
default = ["server-logic"]
