[package]
name = "opsqueue"
version = "0.32.1"
edition = "2021"
description = "lightweight batch processing queue for heavy loads"
repository = "https://github.com/channable/opsqueue"
license = "MIT"
include=["opsqueue_example_database_schema.db"]

[lib]
name="opsqueue"
path="src/lib.rs"

[[bin]]
name="opsqueue"
path="app/main.rs"
required-features = ["server-logic"]

[dependencies]
# Datatypes and concurrency:
itertools = "0.14.0"
arc-swap = {version = "1.8.0", optional = true}
moka = { version = "0.12.12", features = ["sync"], optional = true }
chrono = { version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
tokio = { version = "1.49.0", features = ["macros", "signal", "rt-multi-thread"] }
uuid = {version = "1.19.0", features = [
        "v7",                # Timestamp-sortable UUIDs with random component
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
        "serde",
    ]}
ux = "0.1.6"
# Error handling:
anyhow = "1.0.86"
# Database:
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"], optional = true }
# Serialization:
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.149"
ciborium = "0.2.2"
# Webservers/clients
http = "1.4.0"
object_store = {version = "0.13.0", features = ["gcp", "http"]}
snowflaked = {version = "1.0.3", features = ["sync"] }
tokio-tungstenite = {version = "0.28.0", optional = true}
axum = { version = "0.8.8", features = ["ws", "macros"], optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"], optional = true }
url = {version = "2.5.8"}
tokio-util = { version = "0.7.18", features = ["io", "rt", "time"] }
tower-http = { version = "0.6.8", features = ["trace", "catch-panic"], optional = true }
# Logging and tracing:
tracing = {version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3", features = ["std", "env-filter"] }
sentry = {version = "0.46", optional = true, default-features=false, features=["rustls", "reqwest", "tracing"]}
sentry-tracing = {version = "0.46", optional = true}
# Exporting traces to Opentelemetry:
axum-tracing-opentelemetry = {version = "0.32.2", optional = true }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-http = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = {version = "0.32.1" }
opentelemetry-semantic-conventions = {version = "0.31.0", features = ["semconv_experimental"], optional = true}
moro-local = "0.4.0"
thiserror = "2.0.17"
either = "1.13.0"
serde-error = "0.1.3"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
rand = "0.9.2"
rustc-hash = "2.0.0"
axum-prometheus = {version = "0.10.0", optional = true}

# Configuration:
clap = { version = "4.5.54", features = ["derive"] }
humantime = "2.1.0"

dashmap = "6.1.0"
crossbeam-skiplist = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "0.8", features = ["async_tokio"]}
insta = { version = "1.46.0" }
assert_matches = { version = "1.5.0" }

# [[bench]]
# name = "chunks_select"
# harness = false

# [[bench]]
# name = "submissions_insert"
# harness = false

[features]
# Dependencies only in use by the server-logic:
server-logic = [
    "dep:sqlx",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:axum-tracing-opentelemetry",
    "dep:moka",
    "dep:axum",
    "dep:tower-http",
    "dep:axum-prometheus",
    "dep:sentry",
    "dep:sentry-tracing"
    ]
# Dependencies only in use by the client libraries:
client-logic = [
    "dep:reqwest",
    "dep:tokio-tungstenite",
    "dep:arc-swap",
]
default = ["server-logic"]
