[package]
name = "opsqueue"
version.workspace = true
edition.workspace = true
description = "lightweight batch processing queue for heavy loads"
repository = "https://github.com/channable/opsqueue"
license = "MIT"

[lib]
name="opsqueue"
path="src/lib.rs"

[[bin]]
name="opsqueue"
path="app/main.rs"
required-features = ["server-logic"]

[dependencies]
# Datatypes and concurrency:
itertools.workspace = true
arc-swap = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
chrono.workspace = true
futures.workspace = true
tokio.workspace = true
uuid.workspace = true
ux.workspace = true
# Error handling:
anyhow.workspace = true
# Database:
sqlx = { workspace = true, optional = true }
# Serialization:
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
# Webservers/clients
http.workspace = true
object_store.workspace = true
snowflaked.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
url.workspace = true
tokio-util.workspace = true
tower-http = { workspace = true, optional = true }
# Logging and tracing:
tracing.workspace = true
tracing-subscriber.workspace = true
sentry = { workspace = true, optional = true }
sentry-tracing = { workspace = true, optional = true }
# Exporting traces to Opentelemetry:
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-resource-detectors.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry.workspace = true
opentelemetry-semantic-conventions = { workspace = true, optional = true }
moro-local.workspace = true
thiserror.workspace = true
either.workspace = true
serde-error.workspace = true
backon.workspace = true
rand.workspace = true
rustc-hash.workspace = true
axum-prometheus = { workspace = true, optional = true }

# Configuration:
clap.workspace = true
humantime.workspace = true

dashmap.workspace = true
crossbeam-skiplist.workspace = true
sqlformat.workspace = true
workspace-hack.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
assert_matches.workspace = true

# [[bench]]
# name = "chunks_select"
# harness = false

# [[bench]]
# name = "submissions_insert"
# harness = false

[features]
# Dependencies only in use by the server-logic:
server-logic = [
    "dep:sqlx",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:moka",
    "dep:axum",
    "dep:tower-http",
    "dep:axum-prometheus",
    "dep:sentry",
    "dep:sentry-tracing"
    ]
# Dependencies only in use by the client libraries:
client-logic = [
    "dep:reqwest",
    "dep:tokio-tungstenite",
    "dep:arc-swap",
]
default = ["server-logic"]
