[package]
name = "opsqueue_python"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opsqueue_python"
crate-type = ["cdylib"]

[dependencies]
# Opsqueue itself:
# NOTE: We compile without the default `sqlx` feature, reducing the amount of dependencies
opsqueue = {path = "../../opsqueue/", default-features = false, features = ["client-logic"] }

# General-purpose datatypes:
uuid = {version = "1.20.0", features = [
        "v7",                # Temporally orderable UUIDs with random component
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}
chrono = { version = "0.4.43"}
ux = "0.1.6"

# Concurrency:
tokio = {version = "1.49", features = ["macros", "rt-multi-thread"]}
futures = "0.3.30"

# Error handling:
anyhow = "1.0.86"
thiserror = "2.0.17"

# Python FFI:
pyo3 = { version = "0.23.4", features = ["chrono"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime", "unstable-streams"] }
once_cell = "1.21.3" # Only currently used for `unsync::OnceCell` as part of PyO3 async helpers.

# Logging/tracing:
pyo3-log = "0.12.1"
tracing = { version = "0.1.44", features = ["log"] }
