[package]
name = "opsqueue_python"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opsqueue_python"
crate-type = ["cdylib"]

[dependencies]
# Opsqueue itself:
# NOTE: We compile without the default `sqlx` feature, reducing the amount of dependencies
opsqueue = { workspace = true, features = ["client-logic"] }

# General-purpose datatypes:
uuid.workspace = true
chrono.workspace = true
ux.workspace = true

# Concurrency:
tokio.workspace = true
futures.workspace = true

# Error handling:
anyhow.workspace = true
thiserror.workspace = true

# Python FFI:
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
once_cell.workspace = true # Only currently used for `unsync::OnceCell` as part of PyO3 async helpers.

# Logging/tracing:
pyo3-log.workspace = true
tracing.workspace = true

workspace-hack.workspace = true

[lints]
workspace = true
