[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend="maturin"

[project]
name = "opsqueue"
readme="README.md"
description = "Python client library for Opsqueue, the lightweight batch processing queue for heavy loads"
license="MIT"
keywords=["queue", "processing", "paralellism", "distributed", "batch", "producer", "consumer"]


requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    # Default serialization format:
    "cbor2",
    # Tracing:
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[project.urls]
Repository="https://github.com/channable/opsqueue"
Issues="https://github.com/channable/opsqueue/issues"


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "opsqueue.opsqueue_internal"

# We specify test-dependencies here (and have them loaded through `.setup_local_venv.sh`)
# because otherwise `pytest` won't be able to see the locally build python package!
[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-random-order==1.1.1",
    "pytest-xdist==3.8.0",
    "multiprocess==0.70.19",
    "pytest-timeout==2.4.0",
]

[tool.pytest.ini_options]
# We ensure tests never rely on global state,
# by running them in a random order, and in parallel:
addopts = "--random-order -n 4"
# Individual tests should be very fast. They should never take multiple seconds
# If after 20sec (accomodating for a toaster-like PC) there is no progress,
# assume a deadlock
timeout=20
