[package]
name = "opsqueue_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opsqueue_producer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["chrono"] }
pyo3-log = "0.11.0"
# pyo3-asyncio = { version = "0.22", features = ["attributes", "tokio-runtime"] }
tokio = {version = "1.38", features = ["macros", "rt-multi-thread"]}
chrono = { version = "0.4.38"}
anyhow = "1.0.86"
futures = "0.3.30"
uuid = {version = "1.11.0", features = [
        "v4",                # Lets you generate random UUIDs
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}
bytes = "1.7.2"

opsqueue = { path = "../../opsqueue/"}
