[package]
name = "toypsqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = "0.7.44"
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.3", features = ["kv-mem", "kv-rocksdb", "kv-speedb"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
