[package]
name = "toypsqueue"
version = "0.1.0"
edition = "2021"

[lib]
name="toypsqueue"
path="src/lib.rs"

[[bin]]
name="toypsqueue"
path="app/main.rs"


[dependencies]
itertools = "0.13.0"
rkyv = "0.7.44"
# rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = { version = "1.0.203", features = ["derive"] }
snowflaked = {version = "1.0.3", features = ["sync"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
# surrealdb = { version = "1.5.3", features = ["kv-mem", "kv-rocksdb", "kv-speedb"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

[[bench]]
name = "chunks_select"
harness = false

[[bench]]
name = "submissions_insert"
harness = false

