[package]
name = "toypsqueue"
version = "0.1.0"
edition = "2021"

[lib]
name="toypsqueue"
path="src/lib.rs"

[[bin]]
name="toypsqueue"
path="app/main.rs"

[[bin]]
name="server"
path="app/server.rs"

# Enable optimizations for dependencies even in dev builds, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable optimizations for proc macros etc.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release]
# For now _do not_ enable debug info for profiling release builds (even though that would allow for better profiling)
# debug = true
# Full fat LTO makes a big difference in performance, at the cost of a large
# compile time hit. You should only use release builds when performance matters.
# Prefer debug builds during regular development.
lto = "fat"



[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
http = "1.1.0"
itertools = "0.13.0"
moka = { version = "0.12.8", features = ["sync"] }
openssl = { version = "0.10.64", features = ["vendored"] }
rkyv = "0.7.44"
# rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = { version = "1.0.203", features = ["derive"] }
snowflaked = {version = "1.0.3", features = ["sync"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"] }
# surrealdb = { version = "1.5.3", features = ["kv-mem", "kv-rocksdb", "kv-speedb"] }
tokio = { version = "1.38.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-websockets = { version = "0.8.3", features = ["server", "client", "openssl", "native-tls", "rustls-native-roots", "fastrand", "rustls-webpki-roots"], default-features = false }
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.124"
ciborium = "0.2.2"
bytes = { version = "1.7.1", features = ["serde"] }
tokio-util = { version = "0.7.11", features = ["io", "rt", "time"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

[[bench]]
name = "chunks_select"
harness = false

[[bench]]
name = "submissions_insert"
harness = false

